[project]
name = "pyrad2"
version = "2.5"
description = "RADIUS Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.3",
    "types-setuptools>=82.0.0.20260508",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[project.urls]
Repository = "https://github.com/nicholasamorim/pyrad2"
Documentation = "https://nicholasamorim.github.io/pyrad2/"
